--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>DL Leung, Horrible Cop</title>
+		<title>dll110, needs improvement</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.cs
 	</head>
 	<body>
 		<nav>
