--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>dll110, needs improvement</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm diesel!</h1>
-				<p>This is a test run. <em>Is this bold?</em> I'm trying this out. <a href="/about">What does this part look like</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:dllpet@gmail.com">email</a></li>
-        		<li><a href="https://github.com/dll110">github.com/dll110</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: diesel
+---
+<div class="blurb">
+	<h1>Hi there, I'm dll110!</h1>
+	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
