--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: page
 title: About
 ---
 This is an alchemical endeavor to convert brain excretions to something pretty. 
