--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 layout: default
 title: diesel
 ---
-<div class="blurb">
-	<h1>Hi there!</h1>
-	<!-- <p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p> -->
-</div><!-- /.blurb -->
+<ul>
+{% for post in site.posts %}
+  <li>
+    <a href="{{ post.url }}">
+      <h2>{{ post.title }}</h2>
+    </a>
+  </li>
+{% endfor %}
+</ul>
