--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,9 @@
 layout: page
 title: About
 ---
-This is an alchemical endeavor to convert brain excretions to something pretty. 
+Hi there! I'm a PhD student in computational systems biology who started in 2019. <br />
+
+This is an alchemical endeavor to convert brain excretions to something pretty. <br />
 
 Involves the attempted digestion of:
 
