updated game of life

--- a/yummy/index.html
+++ b/yummy/index.html
@@ -38,6 +38,8 @@ memorable fiction:
 <li>children's series: Gregor the Overlander (Collins)</li>
 </ul>
 
+a more comprehensive list: 
+<a href="https://www.goodreads.com/user/show/136799617-diana-l">my goodreads profile</a>
 
 misc articles: <br />
 <ul>
