--- a/poop/index.html
+++ b/poop/index.html
@@ -3,13 +3,28 @@ layout: default
 title: Projects & Writings
 ---
 
-
+attempts at modeling:
+<br>
 <a href="xymodel_greg.html">greg's xymodel</a>
 <br>
 <a href="xymodel_test.html">edited xymodel</a>
 <br>
-<a href="game_of_life.html">game of life?</a>
+<a href="game_of_life.html">game of life</a>
 <br>
 <a href="game_of_life2.html">game of life? bottom up</a>
+<br>
+<a href="game_of_life2.html">mandelbrot set</a>
 
 <!--<script src="test.js"></script> -->
+
+logorrhea:
+<br> 
+We're deuterostomes, or "second mouth". This is because our anus forms before our mouth. No wonder we speak 
+<br>
+<!--<a href="goodreads reviews">moonlighting as a book critic</a>-->
+
+
+<a href="https://scholar.google.com/citations?hl=en&user=5vXyVjoAAAAJ">old dabbles in analysis</a>
+
+
+
