--- a/yummy/index.html
+++ b/yummy/index.html
@@ -1,7 +1,9 @@
 ---
 layout: page
-title: stuff I like
+title: stuff I like/reference a lot
 ---
+
+After reading "The Selfish Gene" in high school, I realized that some models can feel better than others, and that I could go 'shopping' for better models in books for which to better organize and navigate the world -- mental interior design, if you will. I've since mined a decent number of books, and books that've donated well-loved and used models are curated here.
 
 books from my evolutionary/developmental biology heyday:
 <ul>
@@ -20,7 +22,7 @@ books in epistemological/cognitive biases realm:
 <li>The Book of Why (Pearl)</li>
 </ul>
 
-books of the complex systems type:
+books for thinking about complex systems:
 <ul>
 <li>Antifragile (Taleb)</li>
 <li>Sync: How Order Emerges from Chaos in the Universe (Strogatz)</li>
@@ -38,11 +40,12 @@ memorable fiction:
 <li>children's series: Gregor the Overlander (Collins)</li>
 </ul>
 
-a more comprehensive list: 
+more generally,  
 <a href="https://www.goodreads.com/user/show/136799617-diana-l">my goodreads profile</a>
+<br>
 
 misc articles: <br />
 <ul>
-<li>[You and Your Research (Hamming)](https://www.cs.virginia.edu/~robins/YouAndYourResearch.html)</li>
+<li>You and Your Research (Hamming)](https://www.cs.virginia.edu/~robins/YouAndYourResearch.html)</li>
 <li>slatestarcodex</li>
 </ul>
