--- a/poop/index.html
+++ b/poop/index.html
@@ -12,7 +12,7 @@ attempts at modeling:
 <a href="mandelbrot.html">mandelbrot set</a>
 <br>
 <a href="serendipity.html">birthday problem</a>
-
+<br>
 <!--<script src="test.js"></script> -->
 
 future logorrhea:
@@ -22,6 +22,6 @@ future logorrhea:
 
 
 <a href="https://scholar.google.com/citations?hl=en&user=5vXyVjoAAAAJ">dabbles from an old life</a>
-
-<a href="notes.html">food blog</a>
+<br>
+<a href="notes.html">a food blog</a>
 
