--- a/poop/notes.html
+++ b/poop/notes.html
@@ -1,1 +1,5 @@
+---
+layout: default
+---
+
 <iframe src="https://docs.google.com/document/d/e/2PACX-1vSFN_j3hzQLkx3vc6iSegQaYEtE8bN4VGEkEo_TuoTcY_3cmtMir5h3EBEze_wfv4QX_FwsrVy5I5Ts/pub?embedded=true"></iframe>
