--- a/poop/mandelbrot.html
+++ b/poop/mandelbrot.html
@@ -1,6 +1,3 @@
-mandelbrot.html
-
-
 
 <body style="background:black;margin:0px"></body>
 <script>
@@ -86,26 +83,28 @@ void main() {
     vec4 t = texture(u_image, vec2(gl_FragCoord.x / float(${W}), gl_FragCoord.y / float(${H})));
     float a = t.r;
 
-    env += process_neighbor(t, vec2(0.0, -1.0));
-    env += process_neighbor(t, vec2(1.0, 0.0));
-    env += process_neighbor(t, vec2(0.0, 1.0));
-    env += process_neighbor(t, vec2(-1.0, 0.0));
-    env += process_neighbor(t, vec2(1.0, -1.0));
-    env += process_neighbor(t, vec2(1.0, 1.0));
-    env += process_neighbor(t, vec2(-1.0, 1.0));
-    env += process_neighbor(t, vec2(-1.0, -1.0));
 
-    if (a == 1.0) {
-        if (env < 2.0 || env > 3.0) {
-            t.r = 0.0;
-        }
-    } else {
-        if(env == 3.0 || env == 6.0) {
-            t.r = 1.0;
-        }
+
+    int i = 0;
+    float cx = -2+x/50;
+    float cy = -2+y/50;
+    float zx = 0;
+    float zy = 0;                        
+
+    do
+    {
+        xt=zx*zy;
+        zx=zx*zx-zy*zy+cx;
+        zy=2*xt+cy;
+        i++;
     }
+    while(i<255&&(zx*zx+zy*zy)<4);
 
-    outColor = t;
+    color=i.toString(16);
+    context.beginPath();
+    context.rect(x*4, y*4, 4, 4);
+    context.fillStyle ='#'+color+color+color;
+    context.fill();
 }
 `)
 
