--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,8 @@ layout: page
 title: About
 ---
 
+ <img src="sisters.jpeg" alt="Dinosaur"> 
+
 This aims to be a tool for processing sparkly ideas into a surreptitously spectacular theory of everything since "everything is connected"*
 
 <br />
