--- a/poop/index.html
+++ b/poop/index.html
@@ -14,8 +14,8 @@ attempts at modeling:
 <a href="serendipity.html">birthday problem</a>
 <br>
 <!--<script src="test.js"></script> -->
-
-future logorrhea:
+<br> 
+mild logorrhea:
 <br> 
 
 <!--<a href="goodreads reviews">moonlighting as a book critic</a>-->
@@ -23,5 +23,5 @@ future logorrhea:
 
 <a href="https://scholar.google.com/citations?hl=en&user=5vXyVjoAAAAJ">dabbles from an old life</a>
 <br>
-<a href="notes.html">a food blog</a>
+<a href="https://docs.google.com/document/d/e/2PACX-1vSFN_j3hzQLkx3vc6iSegQaYEtE8bN4VGEkEo_TuoTcY_3cmtMir5h3EBEze_wfv4QX_FwsrVy5I5Ts/pub?embedded=true">a food blog, of sorts</a>
 
