--- a/yummy/index.html
+++ b/yummy/index.html
@@ -4,14 +4,13 @@ title: stuff I like/reference a lot
 ---
 
 After reading "The Selfish Gene" in high school, I realized that some models can feel better than others, and that I could go 'shopping' for better models in books for which to better organize and navigate the world -- mental interior design, if you will. I've since mined a decent number of books, and books that've donated well-loved and used models are curated here.
-
+</ul>
 books from my evolutionary/developmental biology heyday:
 <ul>
 <li>The Selfish Gene (Dawkins)</li>
 <li>Mutants: On Genetic Variety and the Human Body (Leroi)</li>
 <li>Freaks of Nature: What Anomalies Tell Us About Development and Evolution (Blumberg)</li>
 </ul>
-
 books in epistemological/cognitive biases realm:
 <ul>
 <li>The Righteous Mind (Haidt)</li>
@@ -21,7 +20,6 @@ books in epistemological/cognitive biases realm:
 <li>The Logic of Science (Jaynes)</li>
 <li>The Book of Why (Pearl)</li>
 </ul>
-
 books for thinking about complex systems:
 <ul>
 <li>Antifragile (Taleb)</li>
@@ -33,19 +31,24 @@ books for thinking about complex systems:
 <li>Anticipatory Systems (Rosen) </li>
 <li>Creation (Grand) </li>
 </ul>
-
 memorable fiction:
 <ul>
 <li>Ender's Game (Card)</li>
 <li>children's series: Gregor the Overlander (Collins)</li>
 </ul>
-
 more generally,  
 <a href="https://www.goodreads.com/user/show/136799617-diana-l">my goodreads profile</a>
 <br>
-
+<br>
 misc articles: <br />
 <ul>
 <li>You and Your Research (Hamming)](https://www.cs.virginia.edu/~robins/YouAndYourResearch.html)</li>
 <li>slatestarcodex</li>
+</ul>
+niche texts that I liked so much that I learned to cut pdfs so my friends/family would be more likely to read them:
+<ul>
+<li>"Cells and Senescence" (Rosen)</li>
+<li>"Parquet Defromations: A Subtle, Intricate Art Form", Metamagical Themas (Hofstadter)</li>
+<li>"The Seeming Paradox of Mechanizing Creativity", Metamagical Themas (Hofstadter)</li>
+<li>"Analogies and Roles in Humann and Machine Thinking", Metamagical Themas (Hofstadter)</li>
 </ul>
