--- a/yummy/index.html
+++ b/yummy/index.html
@@ -47,8 +47,8 @@ misc articles: <br />
 </ul>
 niche texts that I liked so much that I learned to cut pdfs so my friends/family would be more likely to read them:
 <ul>
-<li>"Cells and Senescence" (Rosen)</li>
-<li>"Parquet Defromations: A Subtle, Intricate Art Form", Metamagical Themas (Hofstadter)</li>
+<li><a href="Rosen_CellsAndSenesence1978 (dragged) 3.pdf">Cells and Senescence" (Rosen)</a></li>
+<li><a href="Douglas Hofstadter - Metamagical Themas_ ch10_Parquet_Deformations.pdf">"Parquet Deformations: A Subtle, Intricate Art Form", Metamagical Themas (Hofstadter)</a></li>
 <li>"The Seeming Paradox of Mechanizing Creativity", Metamagical Themas (Hofstadter)</li>
 <li>"Analogies and Roles in Humann and Machine Thinking", Metamagical Themas (Hofstadter)</li>
 </ul>
