--- a/poop/index.html
+++ b/poop/index.html
@@ -17,10 +17,8 @@ attempts at modeling:
 <br> 
 mild logorrhea:
 <br> 
-
-<!--<a href="goodreads reviews">moonlighting as a book critic</a>-->
-
-
+<a href="https://www.goodreads.com/review/list/136799617-diana-l?shelf=read">moonlighting as a book critic</a>
+<br>
 <a href="https://scholar.google.com/citations?hl=en&user=5vXyVjoAAAAJ">dabbles from an old life</a>
 <br>
 <a href="https://docs.google.com/document/d/e/2PACX-1vSFN_j3hzQLkx3vc6iSegQaYEtE8bN4VGEkEo_TuoTcY_3cmtMir5h3EBEze_wfv4QX_FwsrVy5I5Ts/pub?embedded=true">a food blog, of sorts</a>
