--- a/yummy/index.html
+++ b/yummy/index.html
@@ -49,6 +49,6 @@ niche texts that I liked so much that I learned to cut pdfs so my friends/family
 <ul>
 <li><a href="Rosen_CellsAndSenesence1978 (dragged) 3.pdf">Cells and Senescence" (Rosen)</a></li>
 <li><a href="Douglas Hofstadter - Metamagical Themas_ ch10_Parquet_Deformations.pdf">"Parquet Deformations: A Subtle, Intricate Art Form", Metamagical Themas (Hofstadter)</a></li>
-<li>"The Seeming Paradox of Mechanizing Creativity", Metamagical Themas (Hofstadter)</li>
-<li>"Analogies and Roles in Humann and Machine Thinking", Metamagical Themas (Hofstadter)</li>
+<li><a href="Douglas Hofstadter - Metamagical Themas_Ch 23 On the Seeming Paradox of Mechanizing Creativity.pdf">The Seeming Paradox of Mechanizing Creativity", Metamagical Themas (Hofstadter)</a></li>
+<li><a href="Douglas Hofstadter - Metamagical Themas_Ch 24 Analogies and Roles in Human and Machine Thinking.pdf">Analogies and Roles in Humann and Machine Thinking", Metamagical Themas (Hofstadter)</a></li>
 </ul>
