--- a/poop/index.html
+++ b/poop/index.html
@@ -9,9 +9,9 @@ attempts at modeling:
 <br>
 <a href="game_of_life.html">game of life</a>
 <br>
-<a href="mandelbrot.html">mandelbrot set</a>
+<!---<a href="mandelbrot.html">mandelbrot set</a>--->
 <br>
-<a href="serendipity.html">birthday problem</a>
+<!---<a href="serendipity.html">birthday problem</a>-->
 <br>
 <!--<script src="test.js"></script> -->
 <br> 
