--- a/yummy/index.html
+++ b/yummy/index.html
@@ -3,8 +3,9 @@ layout: page
 title: stuff I like/reference a lot
 ---
 
-After reading "The Selfish Gene" in high school, I realized that some models can feel better than others, and that I could go 'shopping' for better models in books for which to better organize and navigate the world -- mental interior design, if you will. I've since mined a decent number of books, and books that've donated well-loved and used models are curated here.
-</ul>
+After reading "The Selfish Gene" in high school, I realized that some models can feel better than others, and that I could go 'shopping' for better models in books for which to better organize and navigate the world -- mental interior design, if you will. These are some of the best places to raid, imo.
+<br />
+<br />
 books from my evolutionary/developmental biology heyday:
 <ul>
 <li>The Selfish Gene (Dawkins)</li>
@@ -17,7 +18,7 @@ books in epistemological/cognitive biases realm:
 <li>Thinking, Fast and Slow (Kahneman)</li>
 <li>Predictably Irrational (Ariely)</li>
 <li>Phantoms in the Brain (Ramachandran)</li>
-<li>The Logic of Science (Jaynes)</li>
+<li>Probability Theory: The Logic of Science (Jaynes)</li>
 <li>The Book of Why (Pearl)</li>
 </ul>
 books for thinking about complex systems:
