--- a/poop/index.html
+++ b/poop/index.html
@@ -1,20 +1,18 @@
 ---
-layout: default
+layout: page
 title: Projects & Writings
 ---
 
 attempts at modeling:
 <br>
-<a href="xymodel_greg.html">greg's xymodel</a>
+<a href="xymodel_greg.html">greg's xymodel</a>, maybe sped up
 <br>
-<a href="game_of_life.html">game of life</a>
+an unsustainable <a href="game_of_life.html">game of life</a>
 <br>
 <!---<a href="mandelbrot.html">mandelbrot set</a>--->
 <br>
 <!---<a href="serendipity.html">birthday problem</a>-->
 <br>
-<!--<script src="test.js"></script> -->
-<br> 
 mild logorrhea:
 <br> 
 <a href="https://www.goodreads.com/review/list/136799617-diana-l?shelf=read">moonlighting as a book critic</a>
@@ -22,4 +20,13 @@ mild logorrhea:
 <a href="https://scholar.google.com/citations?hl=en&user=5vXyVjoAAAAJ">dabbles from an old life</a>
 <br>
 <a href="https://docs.google.com/document/d/e/2PACX-1vSFN_j3hzQLkx3vc6iSegQaYEtE8bN4VGEkEo_TuoTcY_3cmtMir5h3EBEze_wfv4QX_FwsrVy5I5Ts/pub?embedded=true">a food blog, of sorts</a>
-
+<br>
+<br>
+theoretical essays (theoretical as in, 'not yet written'):
+<br> 
+words from a wise one (me)
+<br> 
+words from wiser ones (inspirational quotes)
+<br> 
+'is forgetting good or am i self-justifying'
+<ul>
