--- a/yummy/index.html
+++ b/yummy/index.html
@@ -43,8 +43,8 @@ more generally,
 <br>
 misc articles: <br />
 <ul>
-<li>You and Your Research (Hamming)](https://www.cs.virginia.edu/~robins/YouAndYourResearch.html)</li>
-<li>slatestarcodex</li>
+<li><a href="https://www.cs.virginia.edu/~robins/YouAndYourResearch.html">You and Your Research</a> (Hamming)</li>
+<li><a href="https://slatestarcodex.com/">slatestarcodex</a></li>
 </ul>
 niche texts that I liked so much that I learned to cut pdfs so my friends/family would be more likely to read them:
 <ul>
