--- a/poop/index.html
+++ b/poop/index.html
@@ -3,6 +3,8 @@ layout: page
 title: Projects & Writings
 ---
 
+<a href="../blog/video_speed_controller.html">this will change your life.</a>
+
 attempts at modeling:
 <br>
 <a href="xymodel_greg.html">greg's xymodel</a>, maybe sped up
