--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@ Since "everything is connected"*, this aims to be a tool for processing sparkly 
 You can find some sparkly things in the "input" page.
 <br />
 <br />
- <img src="sisters.jpeg" alt="wow they're so beauuutiful" style="width:500px;height:300px;"> 
+ <img src="../documents/sisters.jpeg" alt="wow they're so beauuutiful" style="width:500px;height:300px;"> 
 <br />
 <hr />
 <p style="font-size:12px">
