--- a/yummy/index.html
+++ b/yummy/index.html
@@ -9,7 +9,7 @@ After reading "The Selfish Gene" in high school, I realized that some models can
 books from my evolutionary/developmental biology heyday:
 <ul>
 <li>The Selfish Gene (Dawkins)</li>
-<li>Mutants: On Genetic Variety and the Human Body (Leroi)</li>
+<li><a href="../poop/acardius_amorphus"> Mutants: On Genetic Variety and the Human Body (Leroi)</a></li>
 <li>Freaks of Nature: What Anomalies Tell Us About Development and Evolution (Blumberg)</li>
 </ul>
 books in epistemological/cognitive biases realm:
@@ -48,8 +48,8 @@ misc articles: <br />
 </ul>
 niche texts that I liked so much that I learned to cut pdfs so my friends/family would be more likely to read them:
 <ul>
-<li><a href="Rosen_CellsAndSenesence1978 (dragged) 3.pdf">Cells and Senescence" (Rosen)</a></li>
-<li><a href="Douglas Hofstadter - Metamagical Themas_ ch10_Parquet_Deformations.pdf">"Parquet Deformations: A Subtle, Intricate Art Form", Metamagical Themas (Hofstadter)</a></li>
-<li><a href="Douglas Hofstadter - Metamagical Themas_Ch 23 On the Seeming Paradox of Mechanizing Creativity.pdf">The Seeming Paradox of Mechanizing Creativity", Metamagical Themas (Hofstadter)</a></li>
-<li><a href="Douglas Hofstadter - Metamagical Themas_Ch 24 Analogies and Roles in Human and Machine Thinking.pdf">Analogies and Roles in Humann and Machine Thinking", Metamagical Themas (Hofstadter)</a></li>
+<li><a href="../documents/Rosen_CellsAndSenesence1978 (dragged) 3.pdf">Cells and Senescence" (Rosen)</a></li>
+<li><a href="../documents/Douglas Hofstadter - Metamagical Themas_ ch10_Parquet_Deformations.pdf">"Parquet Deformations: A Subtle, Intricate Art Form", Metamagical Themas (Hofstadter)</a></li>
+<li><a href="../documents/Douglas Hofstadter - Metamagical Themas_Ch 23 On the Seeming Paradox of Mechanizing Creativity.pdf">The Seeming Paradox of Mechanizing Creativity", Metamagical Themas (Hofstadter)</a></li>
+<li><a href="../documents/Douglas Hofstadter - Metamagical Themas_Ch 24 Analogies and Roles in Human and Machine Thinking.pdf">Analogies and Roles in Humann and Machine Thinking", Metamagical Themas (Hofstadter)</a></li>
 </ul>
