--- a/poop/index.html
+++ b/poop/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Projects & Writings
 ---
 
-<a href="../blog/video_speed_controller.html">this will change your life.</a>
+
 
 attempts at modeling:
 <br>
@@ -16,6 +16,8 @@ an unsustainable <a href="game_of_life.html">game of life</a>
 <!---<a href="serendipity.html">birthday problem</a>-->
 <br>
 mild logorrhea:
+<br>
+<a href="../blog/video_speed_controller.html">This will change your life.</a>
 <br> 
 <a href="https://www.goodreads.com/review/list/136799617-diana-l?shelf=read">moonlighting as a book critic</a>
 <br>
