--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@ title: About
 
 
 
-Since "everything is connected"*, this aims to be a tool for processing sparkly ideas into a surreptitously spectacular theory of everything. 
+Since everything is connected*, this aims to be a tool for processing sparkly ideas into a surreptitously spectacular theory of everything. 
 <p style="font-size: 8px">And I'm chronically mentally constipated</p>
 <br />
 You can find some sparkly things in the "input" page.
@@ -15,7 +15,7 @@ You can find some sparkly things in the "input" page.
 <br />
 <hr />
 <p style="font-size:12px">
-*as can be referenced in:
+*as referenced in:
 <br />
 1. <a href="http://itila.blogspot.com/">David Mackay's blog title</a>
 <br />
