--- a/poop/acardius_amorphus.html
+++ b/poop/acardius_amorphus.html
@@ -5,24 +5,21 @@ title: acardius amorphus and antisphexishness
 
 <img src="../documents/acardius_amorphus.jpg" alt="it's a ball" style="width:400px;height:500px;float: right;"> 
 
-The author describes a specimen in the Vrolik museum labelled as 'acardia amorphus', “a skin-covered sphere with nothing to hint at the child it almost became except for a small umbilical cord, a bit of intestine, and the rudiments of a vertebral column.”
+Armand Marie Leroi describes a specimen in the Vrolik museum labelled as 'acardia amorphus', “a skin-covered sphere with nothing to hint at the child it almost became except for a small umbilical cord, a bit of intestine, and the rudiments of a vertebral column.”
 <br>
 <br>
-It was a startling description because until then, I did not know that human development could go so awry -- that I could've gone so awry. To think, that I could've been a ball instead of what I am today.
+It was a startling thing to read because until then, I did not know that human development could go so awry -- that <i>I</i> could've gone so awry. To think, that I could've been a ball. 
 <br>
 <br>
-I didn't have easy words to articulate the aspect of what I found so unsettling. Maybe it was the relative 'complexity'?
+I felt the compulsion to see concrete evidence of this -- surely Armand was exaggerating? But this was back in 2008ish, when googling such a thing gave me unsatisfying, less sphereical variants (actually, it still does). But I was lucky and resourceful: I found someone's flickr album of their visit to the Vrolik Museum, and flipping through their comprehensive-enough pictures of the display cases, I spotted it. It was rather unassuming, but he was not exaggering. I saved it (it is on the right, bottom-middle). 
 <br>
 <br>
-More than a decade later, I would come across 
+Six years later, I still somehow found it compelling enough that, when on a trip to Paris, I took a detour to Amsterdam for less than 24 hours, just to see it in person.
+<br>
+<br>
+And more than a decade later, I would come across 
 <a href="../documents/Douglas Hofstadter - Metamagical Themas_Ch 23 On the Seeming Paradox of Mechanizing Creativity.pdf">The Seeming Paradox of Mechanizing Creativity", in Metamagical Themas (Hofstadter)</a>
-where he talks about 'sphexishness', or a rough gauge of complexity by how good at 'rut-breaking' it is. It didn't even reach that. 
-<br>
-<br>
-Anyway, it was compelling enough of a concept that I took a detour to Amsterdam from Paris, for less than 24 hours, just to see it in person.
-<br>
-<br>
-I also found this picture back in 2010ish, when googling variants of this term didn't bring up much. I finally found it by stalking someone's flickr photos of their visit to the Vrolik Museum, where they had conveniently taken a picture of sufficient displays that I was able to spot what I was looking for, like an applied game of 'I spy'. 
+where he talks about 'sphexishness', or a rough gauge of complexity by how good at 'rut-breaking' it is. It gave me another way to help express my fascination with acardia amorphus: I could've been so <i>sphexish</i>.
 <br>
 <br>
 <br>
