--- a/poop/index.html
+++ b/poop/index.html
@@ -3,9 +3,9 @@ layout: page
 title: Projects & Writings
 ---
 
+ <img src="../documents/resurrected_hypothesis.jpeg" title="oh to be a resurrected hypothesis" style="width:400px;height:300px;float: right;"> 
 
-
-attempts at modeling:
+attempts, at modeling:
 <br>
 <a href="xymodel_greg.html">greg's xymodel</a>, maybe sped up
 <br>
@@ -15,22 +15,30 @@ an unsustainable <a href="game_of_life.html">game of life</a>
 <br>
 <!---<a href="serendipity.html">birthday problem</a>-->
 <br>
-mild logorrhea:
+solid:
 <br>
-<a href="../blog/video_speed_controller.html">This will change your life.</a>
+<a href="../blog/video_speed_controller.html">An ode to video speed controller</a>
+<br>
+<br>
+mild logorrhea:
 <br> 
 <a href="https://www.goodreads.com/review/list/136799617-diana-l?shelf=read">moonlighting as a book critic</a>
 <br>
 <a href="https://scholar.google.com/citations?hl=en&user=5vXyVjoAAAAJ">dabbles from an old life</a>
+<br> 
+<br>
+half-digested:
 <br>
 <a href="https://docs.google.com/document/d/e/2PACX-1vSFN_j3hzQLkx3vc6iSegQaYEtE8bN4VGEkEo_TuoTcY_3cmtMir5h3EBEze_wfv4QX_FwsrVy5I5Ts/pub?embedded=true">a food blog, of sorts</a>
 <br>
 <br>
-theoretical essays (theoretical as in, 'not yet written'):
+theoretical pages (theoretical as in, 'not yet written'):
 <br> 
 words from a wise one (me)
 <br> 
 words from wiser ones (inspirational quotes)
 <br> 
 'is forgetting good or am i self-justifying'
+<br> 
+development as biological file decompression
 <ul>
