--- a/yummy/index.html
+++ b/yummy/index.html
@@ -3,6 +3,8 @@ layout: page
 title: stuff I like/reference a lot
 ---
 
+<img src="../documents/puddle_escher.jpeg" alt="puddle" style="width:650px;height:500px;float: right;"> 
+
 After reading "The Selfish Gene" in high school, I realized that some models can feel better than others, and that I could go 'shopping' for better models in books for which to better organize and navigate the world -- mental interior design, if you will. These are some of the best places to raid, imo.
 <br />
 <br />
