--- a/eat/index.html
+++ b/eat/index.html
@@ -48,7 +48,7 @@ misc articles: <br />
 <li><a href="https://www.cs.virginia.edu/~robins/YouAndYourResearch.html">You and Your Research</a> (Hamming)</li>
 <li><a href="https://slatestarcodex.com/">slatestarcodex</a></li>
 </ul>
-niche texts that I liked so much that I learned to cut pdfs so my friends/family would be more likely to read them:
+niche texts that I liked so much that <a href="pdfs.html">I learned to cut pdfs</a> so my friends/family would be more likely to read them:
 <ul>
 <li><a href="../documents/Rosen_CellsAndSenesence1978 (dragged) 3.pdf">Cells and Senescence" (Rosen)</a></li>
 <li><a href="../documents/Douglas Hofstadter - Metamagical Themas_ ch10_Parquet_Deformations.pdf">"Parquet Deformations: A Subtle, Intricate Art Form", Metamagical Themas (Hofstadter)</a></li>
