--- a/poop/index.html
+++ b/poop/index.html
@@ -7,10 +7,17 @@ title: Projects & Writings
 
 attempts, at modeling:
 <br>
-<a href="xymodel_greg.html">greg's xymodel</a>, maybe sped up
+<a href="xymodel_greg.html">greg's xymodel, maybe sped up</a>/an unsustainable <a href="game_of_life.html">game of life</a>
 <br>
-an unsustainable <a href="game_of_life.html">game of life</a>
+<a href="GOL2/game_of_life2.html">another</a> game of life
 <br>
+<a href="evolution/index.html">evolving phrases</a>/[to do] evolving cellular automata
+<br>
+<a href="swarm/index.html">flocking</a>/[to do] targeted flocking
+<br>
+<a href="fractals/index.html">koch fractal</a>/[to do] sierpinski triangle
+<br>
+[to do] mandelbrot set
 <!---<a href="mandelbrot.html">mandelbrot set</a>--->
 <br>
 <!---<a href="serendipity.html">birthday problem</a>-->
@@ -32,7 +39,7 @@ half-digested:
 <a href="https://docs.google.com/document/d/e/2PACX-1vSFN_j3hzQLkx3vc6iSegQaYEtE8bN4VGEkEo_TuoTcY_3cmtMir5h3EBEze_wfv4QX_FwsrVy5I5Ts/pub?embedded=true">a food blog, of sorts</a>
 <br>
 <br>
-theoretical pages (theoretical as in, 'not yet written'):
+theoretical writings (theoretical as in, 'not yet written'):
 <br> 
 words from a wise one (me)
 <br> 
