--- a/poop/acardius_amorphus.html
+++ b/poop/acardius_amorphus.html
@@ -11,15 +11,15 @@ Armand Marie Leroi describes a specimen in the Vrolik museum labelled as 'acardi
 It was a startling thing to read because until then, I did not know that human development could go so awry -- that <i>I</i> could've gone so awry. To think, that I could've been a ball. 
 <br>
 <br>
-I felt the compulsion to see concrete evidence of this -- surely Armand was exaggerating? But this was back in 2008ish, when googling such a thing gave me unsatisfying, less sphereical variants (actually, it still does). But I was lucky and resourceful: I found someone's flickr album of their visit to the Vrolik Museum, and flipping through their comprehensive-enough pictures of the display cases, I spotted it. It was rather unassuming, but he was not exaggering. I saved it (it is on the right, bottom-middle). 
+I felt the compulsion to see concrete evidence of this -- surely Armand was exaggerating? But this was back in 2008ish, when googling such a thing gave me unsatisfying, less sphereical variants (actually, it still does). But I was lucky and resourceful: I found someone's flickr album of their visit to the Vrolik Museum, and flipping through their comprehensive-enough pictures of the display cases, I spotted it. It was rather unassuming, but he was not exaggering. Its roundness was unmistakeable. I've saved it -- now posted here to satisfy your curiosity (it is on the right, bottom-middle). 
 <br>
 <br>
 Six years later, I still somehow found it compelling enough that, when on a trip to Paris, I took a detour to Amsterdam for less than 24 hours, just to see it in person.
 <br>
 <br>
-And more than a decade later, I would come across 
+And more than a decade later, I came across 
 <a href="../documents/Douglas Hofstadter - Metamagical Themas_Ch 23 On the Seeming Paradox of Mechanizing Creativity.pdf">The Seeming Paradox of Mechanizing Creativity", in Metamagical Themas (Hofstadter)</a>
-where he talks about 'sphexishness', or a rough gauge of complexity by how good at 'rut-breaking' it is. It gave me another way to help express my fascination with acardia amorphus: I could've been so <i>sphexish</i>.
+where he talks about 'sphexishness', or a rough gauge of complexity by how good at 'rut-breaking' it is. It gave me another way to help express my fascination with acardia amorphus -- I could've been so <i>sphexish</i>.
 <br>
 <br>
 <br>
