--- a/poop/gently.html
+++ b/poop/gently.html
@@ -4,16 +4,49 @@ title: Highlights from "Dirk Gently's Holistic Detective Agency"
 ---
 
  <img src="../documents/a_trace_of_the_true_self_exists_in_the_false_self.jpeg" title="'a trace of the true self exists in the false self'" style="width:600px;height:400px;float: right;"> 
-
+[finished 2022/10/19]
+<br>
+<br>
 “...<a href="https://www.youtube.com/watch?v=r30D3SW4OVw">Ravel’s Bolero</a> flouted out of eight perfectly matched speakers with fine-meshed matt-black grilles.” (48)
 <br>
+<li>the first time I've seen this piece referenced in a book</li>
 <br>
 “The term ‘holistic’ refers to my conviction that what we are concerned with here is the fundamental interconnectedness of all things.’ (121)
 <br>
 <br>
 "...don't you understand that we need to be childish in order to understand? Only a child sees things with perfect clarity, because it hasn't developed all those filters which prevent us from seeing things that we don't expect to see." (183)
 <br>
+<li>Adams supports my case for forgetting +1</li>
 <br>
 “The thing is that your memory doesn’t actually get any bigger, and a lot of stuff just falls out. So you see, the major difference between you and me is not how much I know, but how much I’ve forgotten.” (209)
+<br>
+<li>Adams supports my case for forgetting +1</li>
+<br>
+<br>
+---
+<br>
+<br>
+Douglas Adams writes like he learned English as a second language -- his lack of mainstream/cliche phrasing makes it unusual but not-wrong. Some tickling pirouettes of phrase:
+<br>
+<br>
+“Well,” said Reg, in a loudly confidential whisper, as if introducing the subject of nipple-piercing in a nunnery, “I hear you’ve suddenly done very well for yourself, at last, hmmm?” (15)
+<br>
+<br>
+“Some people pick their noses, others habitually beat up old ladies on the streets. Reg’s habit was a harmless if peculiar one – an addiction to childish conjuring tricks.” (16)
+<br>
+<br>
+“...a topic that fascinated the cashier not at all.”
+<br>
+<br>
+“It was an older, wiser Monk now, and had put childish things behind it. Pink valleys, hermaphrodite tables, these were all natural stages through which one had to pass on the path to true enlightenment.” (33)
+<br>
+<br>
+“he wore…a red-checked shirt which failed entirely to harmonize with the suit, and a green striped tie which refused to speak with either of them.” (122)
+<br>
+<br>
+“He put some more cold pizza into his face.” (128)
+<br>
+<br>
+“The electric monk’s day was going tremendously well and he broke into an excited gallop. that is to say that, excitedly, he spurred his horse o a gallop and , excitedly, his horse broke into it.” (188)
 <br>
 <br>
