--- a/poop/index.html
+++ b/poop/index.html
@@ -9,11 +9,11 @@ attempts, at modeling:
 <br>
 <a href="xymodel_greg.html">greg's xymodel, maybe sped up</a>/an unsustainable <a href="game_of_life.html">game of life</a>
 <br>
-<a href="GOL2/game_of_life2.html">another</a> game of life
+<a href="life/game_of_life2.html">another</a> game of life
 <br>
-<a href="evolution/index.html">evolving phrases</a>/[to do] evolving cellular automata
+<a href="an_evolved_phrase/index.html">evolving phrases</a>/[to do] evolving cellular automata
 <br>
-<a href="swarm/index.html">flocking</a>/[to do] targeted flocking
+<a href="a_swarm/index.html">flocking</a>/[to do] targeted flocking
 <br>
 <a href="fractals/index.html">koch fractal</a>/[to do] sierpinski triangle
 <br>
@@ -24,7 +24,7 @@ attempts, at modeling:
 <br>
 solid:
 <br>
-<a href="../blog/video_speed_controller.html">An ode to video speed controller</a>
+<a href="../eat/with_speed.html">An ode to video speed controller</a>
 <br>
 <br>
 mild logorrhea:
