--- a/poop/gently.html
+++ b/poop/gently.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Highlights from "Dirk Gently's Holistic Detective Agency"
+date: 2022/10/19
 ---
 
  <img src="../documents/a_trace_of_the_true_self_exists_in_the_false_self.jpeg" title="'a trace of the true self exists in the false self'" style="width:600px;height:400px;float: right;"> 
@@ -22,11 +23,14 @@ title: Highlights from "Dirk Gently's Holistic Detective Agency"
 <br>
 <li>Adams supports my case for forgetting +1</li>
 <br>
+"He insituted this, er, Chair of Chronology to see if there was any particular reason why one thing happened after another and if there was any way of stopping it. Since the answers to the three questions were, I knew immediately, yes, no, and maybe, I realized I could then take the rest of my career off." (15)
 <br>
+<li>I would also like a Chair where I could take the rest of my career off and putz about. 
+<li>Spoiler: <p style="color:white">The missing third question is the first question: "...if it is possible to move backward in time, or something of that kind?" (204)</p></li>
 ---
 <br>
 <br>
-Douglas Adams writes like he learned English as a second language -- his lack of mainstream/cliche phrasing makes it unusual but not-wrong. Some tickling pirouettes of phrase:
+Douglas Adams writes like he learned English as a second language -- his lack of cliche phrasing and metaphors makes one double-take but there is nothing technically wrong. In fact, it's better. Perhaps <a href="https://www.orwellfoundation.com/the-orwell-foundation/orwell/essays-and-other-works/politics-and-the-english-language/">Orwell</a> would approve. Some verbal pirouettes:
 <br>
 <br>
 “Well,” said Reg, in a loudly confidential whisper, as if introducing the subject of nipple-piercing in a nunnery, “I hear you’ve suddenly done very well for yourself, at last, hmmm?” (15)
