--- a/poop/gently.html
+++ b/poop/gently.html
@@ -51,6 +51,6 @@ Douglas Adams writes like he learned English as a second language -- his lack of
 “He put some more cold pizza into his face.” (128)
 <br>
 <br>
-“The electric monk’s day was going tremendously well and he broke into an excited gallop. that is to say that, excitedly, he spurred his horse o a gallop and , excitedly, his horse broke into it.” (188)
+“The electric monk’s day was going tremendously well and he broke into an excited gallop. that is to say that, excitedly, he spurred his horse o a gallop and, unexcitedly, his horse broke into it.” (188)
 <br>
 <br>
