--- a/poop/index.html
+++ b/poop/index.html
@@ -5,19 +5,20 @@ title: Projects & Writings
 
  <img src="../documents/resurrected_hypothesis.jpeg" title="oh to be a resurrected hypothesis" style="width:400px;height:300px;float: right;"> 
 
-attempts, at modeling:
+attempts at modeling (original/first manipulation/second manipulation/etc):
 <br>
 <a href="xymodel_greg.html">greg's xymodel, maybe sped up</a>/an unsustainable <a href="game_of_life.html">game of life</a>
 <br>
-<a href="life/game_of_life2.html">another</a> game of life
+another <a href="life/game_of_life2.html">game of life</a>/
 <br>
 <a href="an_evolved_phrase/index.html">evolving phrases</a>/[to do] evolving cellular automata
 <br>
 <a href="a_swarm/index.html">flocking</a>/[to do] targeted flocking
 <br>
-<a href="fractals/index.html">koch fractal</a>/[to do] sierpinski triangle
+<a href="fractals/original/index.html">koch fractal</a>/<a href="fractals/iter1/index.html">koch snowflake</a>/<a href="fractals/iter2/index.html">[to do] sierpinski triangle</a>
 <br>
 [to do] mandelbrot set
+<br>
 <!---<a href="mandelbrot.html">mandelbrot set</a>--->
 <br>
 <!---<a href="serendipity.html">birthday problem</a>-->
@@ -37,6 +38,8 @@ mild logorrhea:
 half-digested:
 <br>
 <a href="https://docs.google.com/document/d/e/2PACX-1vSFN_j3hzQLkx3vc6iSegQaYEtE8bN4VGEkEo_TuoTcY_3cmtMir5h3EBEze_wfv4QX_FwsrVy5I5Ts/pub?embedded=true">a food blog, of sorts</a>
+<br>
+<a href="cooking.html">a food blog, for real</a>
 <br>
 <br>
 theoretical writings (theoretical as in, 'not yet written'):
