--- a/eat/index.html
+++ b/eat/index.html
@@ -38,6 +38,7 @@ memorable fiction:
 <ul>
 <li>Ender's Game (Card)</li>
 <li>children's series: Gregor the Overlander (Collins)</li>
+<li><a href="../poop/gently.html">Dirk Gently's Holistic Detective Agency (Adams)</a></li>
 </ul>
 more generally,  
 <a href="https://www.goodreads.com/user/show/136799617-diana-l">my goodreads profile</a>
