--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,9 @@ title: About
 
 
 Since everything is connected*, this aims to be a tool for processing sparkly ideas into a surreptitously spectacular theory of everything. 
-<p style="font-size: 8px">And I'm chronically mentally constipated</p>
+
+<a href="../poop/writing.html" style="font-size: 8px">And I'm chronically mentally constipated</a>
+<br />
 <br />
 You can find some sparkly things in the "input" page.
 <br />
