--- a/eat/index.html
+++ b/eat/index.html
@@ -41,7 +41,7 @@ memorable fiction:
 <li><a href="../poop/gently.html">Dirk Gently's Holistic Detective Agency (Adams)</a></li>
 </ul>
 more generally,  
-<a href="https://www.goodreads.com/user/show/136799617-diana-l">my goodreads profile</a>
+<a href="https://www.goodreads.com/review/list/136799617-diana-l?order=d&sort=review&view=reviews">my goodreads profile</a>
 <br>
 <br>
 misc articles: <br />
