--- a/poop/index.html
+++ b/poop/index.html
@@ -23,17 +23,21 @@ another <a href="life/game_of_life2.html">game of life</a>/
 <br>
 <!---<a href="serendipity.html">birthday problem</a>-->
 <br>
-solid:
+bits and bobbles:
 <br>
 <a href="../eat/with_speed.html">An ode to video speed controller</a>
 <br>
+<a href="writing.html">on starting to write</a>
 <br>
-mild logorrhea:
+<br>
+"published":
 <br> 
 <a href="https://www.goodreads.com/review/list/136799617-diana-l?shelf=read">moonlighting as a book critic</a>
 <br>
 <a href="https://scholar.google.com/citations?hl=en&user=5vXyVjoAAAAJ">dabbles from an old life</a>
 <br> 
+<a href="https://newscience.substack.com/p/a-call-for-context-in-cell-culture">
+my first popsci</a>
 <br>
 half-digested:
 <br>
@@ -51,4 +55,9 @@ words from wiser ones (inspirational quotes)
 'is forgetting good or am i self-justifying'
 <br> 
 development as biological file decompression
+<br> 
+"stress and innovation"
+<br> 
+<a href="scoop.html">on being scoopable</a>
 <ul>
+
