--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@ You can find some sparkly things in the "input" page.
 <p style="font-size:12px">
 *as referenced in:
 <br />
-1. <a href="http://itila.blogspot.com/">David Mackay's blog title</a>
+1. David Mackay's (author of <a href="https://www.amazon.com/Information-Theory-Inference-Learning-Algorithms/dp/0521642981"> "Information Theory, Inference, and Learning Algorithms"</a>) <a href="http://itila.blogspot.com/">blog title</a>
 <br />
 2. "Creation", Steve Grand: 
 “the writer Douglas Adams, who has a tremendous feeling for such concepts, talks about the interconnectedness of all things” (32)
