--- a/eat/pdfs.html
+++ b/eat/pdfs.html
@@ -9,7 +9,7 @@ I'm not an old fart, but I learned to cut pdfs years after college.
 What to do, when something you've read and want to discuss with someone is an essay in a book old and unpopular enough that no one's bothered to put it up on its own on the internet?  
 <br>
 <br>
-What to do, when your friends and family will probably politely ignore the befuddling mass of MBs you send over email? 
+What to do, when your friends and family will probably politely ignore the unsolicited mass of MBs you send over email? 
 <br>
 <br>
 This otherwise lazy person learned to cut pdfs to make it a more likely reality that they'll have friends to muck about in the fun-ness of such ideas. Or even say that it's dumb. Send me a thought, please. 
