--- a/poop/index.html
+++ b/poop/index.html
@@ -25,9 +25,11 @@ another <a href="life/game_of_life2.html">game of life</a>/
 
 "published":
 <br> 
-<a href="https://www.goodreads.com/review/list/136799617-diana-l?shelf=read">moonlighting as a book critic</a>
+dabbling as a <a href="https://www.goodreads.com/review/list/136799617-diana-l?shelf=read">book critic</a>
 <br>
-<a href="https://scholar.google.com/citations?hl=en&user=5vXyVjoAAAAJ">dabbles from an old life</a>
+according to <a href="https://scholar.google.com/citations?hl=en&user=5vXyVjoAAAAJ">google scholar</a>
+<br> 
+posthumously, my <a href="personal_statement">personal statement</a> for my failed medical school application
 <br> 
 <a href="https://newscience.substack.com/p/a-call-for-context-in-cell-culture">
 my first popsci</a>
