updating booklist and stackrank

--- a/eat/index.html
+++ b/eat/index.html
@@ -14,7 +14,7 @@ books from my evolutionary/developmental biology heyday:
 <li><a href="../poop/acardius_amorphus"> Mutants: On Genetic Variety and the Human Body (Leroi)</a></li>
 <li>Freaks of Nature: What Anomalies Tell Us About Development and Evolution (Blumberg)</li>
 </ul>
-books in epistemological/cognitive biases realm:
+books in epistemological/cognitive biases/information processing realm:
 <ul>
 <li>The Righteous Mind (Haidt)</li>
 <li>Thinking, Fast and Slow (Kahneman)</li>
@@ -22,6 +22,8 @@ books in epistemological/cognitive biases realm:
 <li>Phantoms in the Brain (Ramachandran)</li>
 <li>Probability Theory: The Logic of Science (Jaynes)</li>
 <li>The Book of Why (Pearl)</li>
+<li>Information Theory, Inference, and Learning Algorithms (McKay)</li>
+<li>Causation, Prediction, and Search (Sprites, Glymour, and Scheines)</li>
 </ul>
 books for thinking about complex systems:
 <ul>
