--- a/eat/index.html
+++ b/eat/index.html
@@ -3,7 +3,7 @@ layout: page
 title: stuff I like/reference a lot
 ---
 
-<img src="../documents/puddle_escher.jpeg" alt="puddle" style="width:320px;height:250px;float: right;"> 
+<img src="../documents/puddle_escher.jpeg" alt="puddle" title="learning to notice; Escher's 'Puddle'" style="width:320px;height:250px;float: right;"> 
 
 After reading "The Selfish Gene" in high school, I realized that some models can feel better than others, and that I could go 'shopping' for better models in books for which to better organize and navigate the world -- mental interior design, if you will. These are some of the best places to raid, imo.
 <br />
@@ -35,6 +35,7 @@ books for thinking about complex systems:
 <li>The Evolution of Individuality (Buss) </li>
 <li>Anticipatory Systems (Rosen) </li>
 <li>Creation (Grand) </li>
+<li>Incomplete Nature (Deacon) </li>
 </ul>
 memorable fiction:
 <ul>
