--- a/eat/with_speed.html
+++ b/eat/with_speed.html
@@ -3,7 +3,7 @@ layout: page
 title: an ode to video speed controller
 ---
 
-<img src="../documents/optimal speed.png" alt="optimal speed" style="width:300px;height:400px;float: right;"> 
+<img src="../documents/optimal speed.png" alt="optimal speed"  title="from 'Reverse Engineering of Biological Complexity' (Csete and Doyle, 2002)" style="width:300px;height:400px;float: right;"> 
 
 If you've ever not comprehended what someone was saying because they were talking too slow and you forgot the first half of their sentence, you should 
 <a href="https://chrome.google.com/webstore/detail/video-speed-controller/nffaoalbilbmmfgbnbgppjihopabppdk?hl=en"> download video speed controller.</a>
