--- a/poop/index.html
+++ b/poop/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Projects & Writings
 ---
 
- <img src="../documents/resurrected_hypothesis.jpeg" title="oh to be a resurrected hypothesis (from Jaynes' 'Probability Theory: The Logic of Science' style=" style="width:400px;height:300px;float: right;"> 
+ <img src="../documents/resurrected_hypothesis.jpeg" title="oh to be a resurrected hypothesis (from Jaynes' 'Probability Theory: The Logic of Science'" style="width:400px;height:300px;float: right;"> 
 
 attempts at modeling (original/first manipulation/second manipulation/etc):
 <br>
