--- a/poop/index.html
+++ b/poop/index.html
@@ -48,7 +48,7 @@ words from a wise one (me)
 <br> 
 words from wiser ones (inspirational quotes)
 <br> 
-<s>'is forgetting good or am i self-justifying'</s> <a href="dll110.github.io/poop/forgetfully">(no longer theoretical!)</a>
+<s>'is forgetting good or am i self-justifying'</s> <a href="https://dll110.github.io/poop/forgetfully">(no longer theoretical!)</a>
 <br> 
 development as biological file decompression
 <br> 
